--- a/index.html
+++ b/index.html
@@ -4,19 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
-  <style>
-    section{
-      min-height: 100vh;
-    }
-    .third-section img{
-      width: 100%;
-    }
-    @media (min-width: 768px){
-      .third-section{
-        min-height: 70vh;
-      } 
-    }
-  </style>
+ <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
   <section class="first-section"><h1>El título</h1></section>
